--- a/lib/rfm/utilities/sax/fmpxmllayout.yml
+++ b/lib/rfm/utilities/sax/fmpxmllayout.yml
@@ -14,7 +14,7 @@ elements:
   attach: none
 - name: errorcode
   attach: none
-  before_close: check_for_errors
+  before_close: :check_for_errors
   attributes:
   - name: text
     as_name: error
@@ -34,7 +34,7 @@ elements:
   - :new
   - ivg(:meta)
   # Must use before_close handler to attach, since field_mapping must be applied to value-list key name.
-  before_close: [object, element_close_handler]
+  before_close: [object, ':element_close_handler']
   # # Used to be 'object.meta', but that required sloppy 'loaded' indicator handling (or infinite loop),
   # # so now just referring to raw inst var @meta, instead of method .meta.
   # # Need to assume attributes may or may not be included in start_element call.
@@ -57,13 +57,13 @@ elements:
   attach: none
 - name: valuelist
   #class: Array
-  attach: [_meta, Array.new]
+  attach: [_meta, Array, ':new']
   as_name: value_lists
   delimiter: name
   elements:
   - name: value
     #class: Rfm::Metadata::ValueListItem
-    attach: [array, 'Rfm::Metadata::ValueListItem', allocate]
+    attach: [array, 'Rfm::Metadata::ValueListItem', ':allocate']
     before_close: replace(@value.to_s)
     attach_attributes: private
     attributes:
